# distributor

./: .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md  b  docker-compose.yaml  merkle_tree.json  p  rustfmt.toml  s
.github/workflows/: build.yaml  release.yaml
api/: Cargo.toml
api/src/: error.rs  main.rs  router.rs
cli/: Cargo.toml
merkle-tree/: Cargo.toml
merkle-tree/src/: airdrop_merkle_tree.rs  csv_entry.rs  error.rs  lib.rs  merkle_tree.rs  tree_node.rs  utils.rs
merkle-tree/test_fixtures/: test_csv.csv
programs/merkle-distributor/: Cargo.toml
programs/merkle-distributor/idl/: merkle_distributor.json
programs/merkle-distributor/src/: error.rs  lib.rs
programs/merkle-distributor/src/instructions/: claim_locked.rs  clawback.rs  close_claim_status.rs  close_distributor.rs  mod.rs  new_claim.rs  new_distributor.rs  set_admin.rs  set_clawback_receiver.rs  set_enable_slot.rs  update_pool_status.rs
programs/merkle-distributor/src/state/: claim_status.rs  claimed_event.rs  merkle_distributor.rs  mod.rs
test/: README.md  merkle_tree.json  merkle_tree.py  requirements.txt  test.py  test_utils.py
test/client_py/: program_id.py
test/client_py/accounts/: __init__.py  claim_status.py  merkle_distributor.py
test/client_py/errors/: custom.py
test/client_py/instructions/: __init__.py  claim_locked.py  clawback.py  new_claim.py  new_distributor.py  set_amin.py  set_clawback_receiver.py
verify/: Cargo.toml
verify/src/: lib.rs
votes/: check_stake_weights.sh
votes/simd0096/: README.md  feature-proposal.csv
