[package]
name = "jup-scripts"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
anchor-client = { workspace = true }
clap = { workspace = true }
jito-merkle-tree = { path = "../merkle-tree" }
merkle-distributor = { path = "../programs/merkle-distributor" }
solana-program = { workspace = true }
solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }
spl-associated-token-account = { workspace = true }
csv="1.3.0"
anyhow = "1.0.57"
bincode = "^1.3.1"
spl-token = "3.5.0"
serde = { workspace = true }
serde_json = { workspace = true }
zip = {version = "0.6.0", features = ["deflate"] }
rand = "0.7.3"
reqwest = { version = "0.11", features = ["blocking"] }