[package]
name = "jito-merkle-tree"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
csv = { workspace = true }
fast-math = { workspace = true }
indexmap = { workspace = true }
jito-merkle-verify = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-program = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hex = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
