[package]
name = "merkle-distributor"
version = "0.0.1"
description = "A Solana program for distributing tokens according to a Merkle root."
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "merkle_distributor"
path = "src/lib.rs"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
bytemuck = "1.14.0"
jito-merkle-verify = { path = "../../verify" }
solana-program = "1.16.16"
solana-security-txt = "1.1.1"
